Feat: Added a grid outline button

--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
           <span class="text"><i class="fa-sharp fa-solid fa-palette"></i></span
           ><span><input type="color" id="colorpicker" value="#0000ff" /></span>
         </button>
-        <button class="button-57" id="resetButton" role="button">
+        <button class="button-57" id="resetButton" role="button" onclick="window.location.href = 'index.html';">
           <span class="text">
             <i class="fa-sharp fa-solid fa-rotate-right"></i></span
-          ><span>Reset Grid</span>
+          ><span class="span-font">Reset</span>
         </button>
-        <button class="button-57" role="button">
+        <button onclick="gridOutline()" class="button-57" role="button" id="outlineButton">
           <span class="text"><i class="fa-solid fa-eye"></i></span
-          ><span>Toggle Outlines</span>
+          ><span class="span-font">Outline Toggle</span>
         </button>
         <button class="button-57" role="button">
           <span class="text"><i class="fa-solid fa-eraser"></i></span
-          ><span>Eraser</span>
+          ><span class="span-font">Eraser</span>
         </button>
         <button class="button-57" role="button">
           <span class="text"><i class="fa-solid fa-rainbow"></i></span
-          ><span>Rainbow Mode</span>
+          ><span class="span-font">Rainbow Mode</span>
         </button>
         <div class="range-slider">
           <input type="range" min="2" max="60"
