--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
           <span class="text"><i class="fa-sharp fa-solid fa-palette"></i></span
           ><span><input type="color" id="colorpicker" value="#0000ff" /></span>
         </button>
-        <button class="button-57" id="resetButton" role="button" onclick="window.location.href = 'index.html';">
+        <button onclick="clearGrid()" class="button-57" role="button" id="clearGridButton">
           <span class="text">
             <i class="fa-sharp fa-solid fa-rotate-right"></i></span
-          ><span class="span-font">Reset</span>
+          ><span class="span-font">Clear Grid</span>
         </button>
         <button onclick="gridOutline()" class="button-57" role="button" id="outlineButton">
           <span class="text"><i class="fa-solid fa-eye"></i></span
