--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -21,17 +21,25 @@
     <div class="header-text">Etch-A-Sketch</div>
     <div class="items">
       <div class="button-hub">
-        
         <button class="button-57" role="button">
           <span class="text"><i class="fa-sharp fa-solid fa-palette"></i></span
           ><span><input type="color" id="colorpicker" value="#0000ff" /></span>
         </button>
-        <button onclick="clearGrid()" class="button-57" role="button" id="clearGridButton">
-          <span class="text">
-            <i class="fa-sharp fa-solid fa-rotate-right"></i></span
+        <button
+          onclick="clearGrid()"
+          class="button-57"
+          role="button"
+          id="clearGridButton"
+        >
+          <span class="text"><i class="fa-sharp fa-solid fa-trash"></i></span
           ><span class="span-font">Clear Grid</span>
         </button>
-        <button onclick="gridOutline()" class="button-57" role="button" id="outlineButton">
+        <button
+          onclick="gridOutline()"
+          class="button-57"
+          role="button"
+          id="outlineButton"
+        >
           <span class="text"><i class="fa-solid fa-eye"></i></span
           ><span class="span-font">Outline Toggle</span>
         </button>
@@ -40,12 +48,11 @@
           ><span class="span-font">Eraser</span>
         </button>
         <button class="button-57" role="button">
-          <span class="text"><i class="fa-solid fa-rainbow"></i></span
+          <span class="text"><i class="fa-solid fa-rainbow" id="randomColorButton"></i></span
           ><span class="span-font">Rainbow Mode</span>
         </button>
         <div class="range-slider">
-          <input type="range" min="2" max="60"
-          value="30" class="slider">
+          <input type="range" min="2" max="60" value="30" class="slider" />
           <div class="slider-thumb">
             <div class="tooltip"></div>
           </div>
