--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
           <span class="text"><i class="fa-solid fa-eraser"></i></span
           ><span class="span-font">Eraser</span>
         </button>
-        <button class="button-57" role="button">
-          <span class="text"><i class="fa-solid fa-rainbow" id="randomColorButton"></i></span
+        <button
+          class="button-57"
+          role="button"
+          id="randomColorButton"
+        >
+          <span class="text"><i class="fa-solid fa-rainbow"></i></span
           ><span class="span-font">Rainbow Mode</span>
         </button>
         <div class="range-slider">
