Feat: Eraser button now works

--- a/index.html
+++ b/index.html
@@ -43,20 +43,16 @@
           <span class="text"><i class="fa-solid fa-eye"></i></span
           ><span class="span-font">Outline Toggle</span>
         </button>
-        <button class="button-57" role="button">
+        <button class="button-57" role="button" id="eraserButton">
           <span class="text"><i class="fa-solid fa-eraser"></i></span
           ><span class="span-font">Eraser</span>
         </button>
-        <button
-          class="button-57"
-          role="button"
-          id="randomColorButton"
-        >
+        <button class="button-57" role="button" id="randomColorButton">
           <span class="text"><i class="fa-solid fa-rainbow"></i></span
           ><span class="span-font">Rainbow Mode</span>
         </button>
         <div class="range-slider">
-          <input type="range" min="2" max="60" value="30" class="slider" />
+          <input type="range" min="2" max="64" value="32" class="slider" />
           <div class="slider-thumb">
             <div class="tooltip"></div>
           </div>
